# Capstone-1

./: .dockerignore  README.md  adult_features.py  dockerfile  model.joblib  notebook.ipynb  payload.json  predict.py  pyproject.toml  serve.py  train.py
